# rsomics-wl-hash

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: gnm_1000_4000_s1.txt  gnm_30_60_s42.txt  gnm_50_120_s7.txt  karate.txt  selfloop_path.txt  selfloop_triangle.txt
