[package]
name = "rsomics-wl-hash"
version = "0.1.0"
edition = "2021"
description = "Weisfeiler-Lehman graph hash & subgraph hashes — value-exact port of networkx.weisfeiler_lehman_graph_hash / weisfeiler_lehman_subgraph_hashes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-wl-hash"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bioinformatics", "graph", "weisfeiler-lehman", "graph-kernel", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-wl-hash"
path = "src/main.rs"

[lib]
name = "rsomics_wl_hash"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
blake2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
